[gd_scene load_steps=6 format=3 uid="uid://61unc78o4jqm"]

[ext_resource type="Script" path="res://scripts/enemy_card.gd" id="1_q0fmc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_radm8"]
bg_color = Color(0.431373, 0.105882, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ubooj"]
bg_color = Color(0.431373, 0.105882, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_66sjf"]
bg_color = Color(0.754647, 0.74703, 0.542539, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lfiyi"]
bg_color = Color(0.4847, 0.441724, 0.460957, 1)

[node name="EnemyCard" type="PanelContainer"]
offset_right = 208.0
offset_bottom = 137.0
theme_override_styles/panel = SubResource("StyleBoxFlat_radm8")
script = ExtResource("1_q0fmc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HeaderShopItemPanel" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_ubooj")

[node name="UnitName" type="Label" parent="VBoxContainer/HeaderShopItemPanel"]
texture_filter = 1
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 1
mouse_filter = 1
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 22
text = "Soldier"
horizontal_alignment = 1

[node name="CoreShopItemPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_66sjf")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CoreShopItemPanel"]
layout_mode = 2
mouse_filter = 2

[node name="UpgradeContainer" type="PanelContainer" parent="VBoxContainer/CoreShopItemPanel/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lfiyi")

[node name="StatsLabel" type="Label" parent="VBoxContainer/CoreShopItemPanel/VBoxContainer/UpgradeContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Damage:
Range:
Attackspeed:
Base health:"
